Remove Environment group by type experiment. Fix chevron alignment.

--- a/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariable.css
+++ b/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariable.css
@@ -18,6 +18,7 @@
 
 .environment-variable .name .gutter {
 	width: 20px;
+	display: flex;
 }
 
 .expand-collapse-button {
